--- a/Ecommerce project/src/index.css
+++ b/Ecommerce project/src/index.css
@@ -14,9 +14,21 @@
   margin-left: auto;
   margin-right: auto;
   max-width: 1200px;
+  padding: 50px;
 }
 
-
+.S_Underline:after {
+  position: absolute;
+  bottom: 0.5rem;
+  left: 2px;
+  height: 0.125rem;
+  width: 0;
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 0.4s;
+  --tw-content: "";
+  content: var(--tw-content);
+}
 
 bdr {
   border: 2px solid red;
